third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/array/tables-2.stderr
TOML parse error at line 9, column 3
  |
9 |   [fruit.variety]
  |   ^
invalid table header
duplicate key `variety` in table `fruit`
